--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-title: "Green Data Canvas"
+title: "KanvasToGrow"
 description: "Portfolio showcasing projects in environmental data science, machine learning, and AI for sustainability."
 theme: jekyll-theme-minimal
